[package]
name = "threshold-secret-sharing"
version = "0.2.3-pre"
authors = [
  "Morten Dahl <morten.dahl@snips.ai>",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of various threshold secret sharing schemes"
keywords = [
  "secret-sharing",
  "Shamir",
  "cryptography",
  "secure-computation",
  "mpc"
]
homepage = "https://github.com/snipsco/rust-threshold-secret-sharing"
documentation = "https://docs.rs/threshold-secret-sharing"
license = "MIT/Apache-2.0"
categories = [ "cryptography" ]

[badges]
travis-ci = { repository = "snipsco/rust-threshold-secret-sharing" }

[features]
#paramgen = ["primal"]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "sgx_rand"]

[dependencies]
#primal = { version = "0.2", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_rand = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "packed"
harness = false
